--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,3 +15,13 @@
 .navbar-light .navbar-nav .nav-link {
   color: #fff !important;
 }
+
+#calender{
+  position: relative;
+  top: 80px;
+}
+
+#all-plants{
+  position: relative;
+  top: 80px;
+}
