--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,7 +10,7 @@
     background-color:transparent;  
     
     text-align: center;
-    line-height: 40px;
+    line-height: 55px;
 }
 
 .navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav>li>a {
@@ -24,8 +24,8 @@
 
 .navbar-nav>li>a {
 	color: #fff!important;
-	font-size: 13px;
-	font-weight: 300;
+	font-size: 15px;
+	font-weight: 400;
 	text-transform: uppercase;
 	text-shadow: none;
 	padding: 20px;
@@ -33,13 +33,29 @@
 }
 
 .navbar-nav>li {
-	margin-left: 45px;
+	margin-left: 10px;
+}
+
+#nav-name{
+	color: #fff;
+	font-size: 18px;
+	margin: auto 0;
+	font-weight: 450;
+	letter-spacing: 0.5px;
 }
 
 .header.active .navbar-nav>li>a {
 	font-size: 13px;
-	font-weight: 300;
+	font-weight: 450;
 	text-transform: uppercase;
+	text-shadow: none;
+	color: #121212!important;
+}
+
+.header.active .navbar-nav>li>span {
+	font-size: 13px;
+	font-weight: 300;
+	/* text-transform: uppercase; */
 	text-shadow: none;
 	color: #121212!important;
 }
@@ -258,9 +274,7 @@ footer ul li a:hover {
 /* Shift Pages down a bit */
 
 #calendar{
-  position: relative;
-  top: 100px;
-  
+  margin-top: 120px;
 }
 
 #my-garden{
@@ -268,10 +282,16 @@ footer ul li a:hover {
 }
 
 #all-plants{
-  position: relative;
-  top: 120px;
+	margin-top: 120px;
   margin-bottom: 120px;
-  
+}
+
+#subscription{
+	margin-top: 120px;
+}
+
+#about-us{
+	margin-top: 120px;
 }
 
 body{
