--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -298,7 +298,7 @@ body{
 	background-image: url(../images/vegetables.png);
   background-repeat: no-repeat;
   background-attachment: static;
-  background-position: center top -70px;
+  background-position: center top -2%;
   background-size: 100%;
 
 }
