--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -129,7 +129,22 @@
   position: absolute;
   bottom: 50px; /*your button position*/
   right: 60px;  
-  box-shadow: 0px 0px 15px gray;
+  box-shadow: 0px 0px 15px black;
+}
+
+.imageButtonNegative {
+  display:block;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 30px;
+  background: red;
+  position: absolute;
+  bottom: 50px; /*your button position*/
+  right: 280px;  
+  box-shadow: 0px 0px 15px black;
 }
 
 
