--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -320,11 +320,20 @@ background: url(../images/vegetables.png) fixed;
     background-repeat: no-repeat;
 }
 
-#aboutSection {
-	padding:5px;
+.aboutSection {
+	padding-bottom:70px;
+	padding-left:20px;
+	padding-right:20px;
+	line-height: 38px;
 }
-#aboutSectionSub {
+#aboutSection {
+	padding:2px;
+	padding-top: 80px;
+	font-weight: 900;
+}
+.aboutSectionSub {
 	padding:10px;
+	font-size: 220%;
 }
 
 .team-member {
@@ -332,10 +341,6 @@ background: url(../images/vegetables.png) fixed;
     text-align: center;
 }
 
-.team-member img {
-    margin: 0 auto;
-    border: 7px solid #fff;
-}
 
 .team-member h4 {
     margin-top: 25px;
