--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,11 +6,11 @@
     padding: 0;
     z-index: 10000;
     transition: all 0.2s ease-in-out;
-    height: 85px;
+    height: 95px;
     background-color:transparent;  
     
     text-align: center;
-    line-height: 40px;
+    line-height: 55px;
 }
 
 .navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav>li>a {
@@ -24,8 +24,8 @@
 
 .navbar-nav>li>a {
 	color: #fff!important;
-	font-size: 13px;
-	font-weight: 300;
+	font-size: 15px;
+	font-weight: 400;
 	text-transform: uppercase;
 	text-shadow: none;
 	padding: 20px;
@@ -33,13 +33,29 @@
 }
 
 .navbar-nav>li {
-	margin-left: 45px;
+	margin-left: 10px;
+}
+
+#nav-name{
+	color: #fff;
+	font-size: 18px;
+	margin: auto 0;
+	font-weight: 450;
+	letter-spacing: 0.5px;
 }
 
 .header.active .navbar-nav>li>a {
 	font-size: 13px;
-	font-weight: 300;
+	font-weight: 450;
 	text-transform: uppercase;
+	text-shadow: none;
+	color: #121212!important;
+}
+
+.header.active .navbar-nav>li>span {
+	font-size: 13px;
+	font-weight: 300;
+	/* text-transform: uppercase; */
 	text-shadow: none;
 	color: #121212!important;
 }
@@ -85,8 +101,6 @@
     padding: 80px 0;
 }
 .navbar-inverse .navbar-toggle {
-	margin-top: 22px;
-	padding: 3px 5px;
     border-color: #57c300;
     background-color: #57c300;
     
@@ -96,9 +110,38 @@
 	background-color: #57c300;
 }
 
-.navbar-toggler-icon{
 
+.imageButton {
+  display:block;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 1em;
+  background: #34d939;
+  position: absolute;
+  bottom: 50px; /*your button position*/
+  right: 60px;  
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
 }
+
+.imageButtonNegative {
+  display:block;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 1em;
+  background: red;
+  position: absolute;
+  bottom: 50px; /*your button position*/
+  right: 290px;  
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
+}
+
+
 
 @media (min-width: 768px) {
     .header .navbar-brand {
@@ -166,12 +209,122 @@ footer ul li a {
 }
 
 footer ul li a:hover {
-	color: #3f7321;
-	background-color: #5c9d7d;
+	color: #d3d3d3;
+	background-color: gray;
 	transition: all 0.5s;
 }
 
 /* RESPONSIVE */
+
+.cd-header {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #21272c;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+@media only screen and (min-width: 768px) {
+  .cd-header {
+    height: 70px;
+    background-color: transparent;
+  }
+}
+
+#cd-logo {
+  float: left;
+  margin: 13px 0 0 5%;
+}
+#cd-logo img {
+  display: block;
+}
+@media only screen and (min-width: 768px) {
+  #cd-logo {
+    margin: 23px 0 0 5%;
+  }
+}
+
+.cd-primary-nav {
+  /* mobile first - navigation hidden by default, triggered by tap/click on navigation icon */
+  float: right;
+  margin-right: 5%;
+  width: 44px;
+  height: 100%;
+}
+.cd-primary-nav ul {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  -webkit-transform: translateY(-100%);
+  -moz-transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
+  -o-transform: translateY(-100%);
+  transform: translateY(-100%);
+}
+.cd-primary-nav ul.is-visible {
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+  -webkit-transform: translateY(50px);
+  -moz-transform: translateY(50px);
+  -ms-transform: translateY(50px);
+  -o-transform: translateY(50px);
+  transform: translateY(50px);
+}
+.cd-primary-nav a {
+  display: block;
+  height: 50px;
+  line-height: 50px;
+  padding-left: 5%;
+  background: #21272c;
+  border-top: 1px solid #333c44;
+  color: #ffffff;
+}
+@media only screen and (min-width: 768px) {
+  .cd-primary-nav {
+    /* reset navigation values */
+    width: auto;
+    height: auto;
+    background: none;
+  }
+  .cd-primary-nav ul {
+    position: static;
+    width: auto;
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+    transform: translateY(0);
+    line-height: 70px;
+  }
+  .cd-primary-nav ul.is-visible {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+    transform: translateY(0);
+  }
+  .cd-primary-nav li {
+    display: inline-block;
+    margin-left: 1em;
+  }
+  .cd-primary-nav a {
+    display: inline-block;
+    height: auto;
+    font-weight: 600;
+    line-height: normal;
+    background: transparent;
+    padding: .6em 1em;
+    border-top: none;
+  }
+}
+
+
+
+
+
 
 @media (max-width: 767px){
 	#main-nav {
@@ -240,9 +393,7 @@ footer ul li a:hover {
 /* Shift Pages down a bit */
 
 #calendar{
-  position: relative;
-  top: 100px;
-  
+  margin-top: 120px;
 }
 
 #my-garden{
@@ -250,7 +401,64 @@ footer ul li a:hover {
 }
 
 #all-plants{
-  position: relative;
-  top: 120px;
+	margin-top: 120px;
   margin-bottom: 120px;
+}
+
+#subscription{
+	margin-top: 120px;
+}
+
+#about-us{
+	margin-top: 120px;
+}
+
+body {
+
+background: url(../images/vegetables.png) fixed; 
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+.aboutSection {
+	padding-bottom:70px;
+	padding-left:20px;
+	padding-right:20px;
+	line-height: 38px;
+}
+#aboutSection {
+	padding:2px;
+	padding-top: 80px;
+	font-weight: 900;
+}
+.aboutSectionSub {
+	padding:10px;
+	font-size: 220%;
+}
+.veggieName {
+	width: 95%;
+}
+
+.team-member {
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+
+.team-member h4 {
+    margin-top: 25px;
+    margin-bottom: 0;
+    text-transform: none;
+}
+
+.team-member p {
+    margin-top: 0;
+}
+
+.carousel-inner {
+	width: 100%;
 }
