--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -113,12 +113,12 @@
 
 .imageButton {
   display:block;
-  height: 50px;
-  width: 50px;
+  height: 2em;
+  width: 2em;
   border-radius: 50%;
   font-family: Arial;
   color: #ffffff;
-  font-size: 1em;
+  font-size: 2em;
   background: #34d939;
   position: absolute;
   bottom: 50px; /*your button position*/
@@ -136,11 +136,13 @@
   font-size: 1em;
   background: red;
   position: absolute;
-  bottom: 50px; /*your button position*/
-  right: 290px;  
+  margin-top: 1em;
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
 }
 
+.calendarStyle {
+	padding-top: 2em;
+}
 
 
 @media (min-width: 768px) {
@@ -459,8 +461,8 @@ background: url(../images/vegetables.png) fixed;
 	padding:10px;
 	font-size: 220%;
 }
-.veggieName {
-	width: 95%;
+.veggieImage {
+	width: 98%;
 }
 
 .team-member {
