--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -60,6 +60,11 @@
 	color: #121212!important;
 }
 
+.vegNameStyle{
+	margin-top:1em;
+	font-size: 1.8em;
+}
+
 .header.active {
     background-color: rgba(250, 250, 250, 0.91);
     -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
@@ -130,8 +135,8 @@
   font-size: 2em;
   background: #34d939;
   position: absolute;
-  bottom: 50px; /*your button position*/
-  right: 60px;  
+  bottom: 85px; /*your button position*/
+  right: 21px;  
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
 }
 
@@ -151,7 +156,8 @@
 
 .homeImages {
 	float: left; 
-	width: 96%; 
+	width: 96%;
+	margin-bottom: 15px; 
 }
 
 .modal {
@@ -397,6 +403,16 @@ background: url(../images/vegetables.png) fixed;
 	width: 100%;
 }
 
+.titleSubscription {
+	font-weight: bold;
+	line-height: 1.5em;
+}
+
+.titleSub {
+	font-size: 1.15em;
+	color: gray;
+	font-style: italic;
+}
 /* FOOTER */
 
 footer {
@@ -554,10 +570,17 @@ footer ul li a:hover {
   }
 }
 
-
-
-
-
+@media (max-width: 1024px){
+	body {
+	background: url(../images/vegetables.png) fixed; 
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: 130% auto;
+    background-position: top center;
+    background-repeat: no-repeat;
+	}
+}
 
 @media (max-width: 767px){
 	#main-nav {
@@ -630,6 +653,15 @@ footer ul li a:hover {
 
 	.cd-hero .slide-caption h2 {
 		font-size: 28px;
+	}
+body {
+	background: url(../images/vegetables.png) fixed; 
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: 240% auto;
+    background-position: top center;
+    background-repeat: no-repeat;
 	}
 }
 
